# dicom-directory-separator-and-metadata-extractor

./: .gitignore  451f1645  README.md  config.example.yaml  organize-dicom.py  pyproject.toml
ctqtools/: cli.py  config.py  indexer.py  organize_dicom.py  qa.py  utils.py
script/: organize-dicom.py
scripts/: scan_preview.py
